# ic-solana

./: .gitignore  Cargo.toml  dfx.json
assets/: encoded_tx.json
scripts/: build  examples
src/ic-solana/: Cargo.toml
src/ic-solana-provider/: Cargo.toml  ic-solana-provider.did
src/ic-solana-provider/src/: constants.rs  eddsa_api.rs  lib.rs  memory.rs  migration.rs  state.rs
src/ic-solana-provider/tests/: common.rs  integration_tests.rs
src/ic-solana/src/: agent.rs  constants.rs  eddsa.rs  ic_log.rs  lib.rs  logs.rs  response.rs  rpc_client.rs  threshold_schnorr.rs
src/ic-solana/src/compute_budget/: compute_budget.rs
src/ic-solana/src/metaplex/: create_fungible22_ix.rs  create_fungible_ix.rs  create_metadata_ix.rs  mod.rs  types.rs  update_metadata_ix.rs
src/ic-solana/src/token/: associated_account.rs  compute_budget.rs  constants.rs  instruction_error.rs  mod.rs  program_error.rs  system_instruction.rs  token_instruction.rs  token_metadata.rs
src/ic-solana/src/types/: account.rs  hash.rs  instruction.rs  message.rs  mod.rs  pubkey.rs  transaction.rs  transaction_error.rs
src/ic-solana/src/utils/: mod.rs
src/test_canister/: Cargo.toml  test_canister.did
src/test_canister/src/: extension.rs  instruction.rs  lib.rs  memory.rs  program_error.rs  serialization.rs  system_instruction.rs  token_error.rs  token_instruction.rs
