[package]
name = "ic-solana"
description = "Interact with Solana blockchain from the Internet Computer."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
candid = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
ic-canister-log = { workspace = true }
ic-cdk = { workspace = true }
ic-crypto-ed25519 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
serde-big-array = "0.5.1"
thiserror = "^1.0.61"
url = "2.5.0"
curve25519-dalek = "3.2.1"
sha2 = "0.10.8"
borsh = "1.5.1"
borsh-derive = "1.5.1"
num-traits = "0.2.19"
num-derive = "0.4"
ic-management-canister-types = { workspace = true }
