[package]
name = "test_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

candid = { workspace = true }
ic-cdk = { workspace = true }
ic-solana = { workspace = true }
# wasm-bindgen = "0.2"
anyhow = "1.0.86"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
num_enum = "0.7.2"
getrandom = { version = "0.2", features = ["custom"] }
ic-canister-log = { workspace = true }
ic-crypto-ed25519 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
serde-big-array = "0.5.1"
thiserror = "^1.0.61"
serde_with = { version = "3.8.1" }
bytemuck = { version = "1.16.1", features = ["derive"] }
ic-management-canister-types = { workspace = true }
curve25519-dalek = "4.1.3"
rand = "0.8.5"
borsh = "1.5.1"
borsh-derive = "1.5.1"
#solana-program = "2.0.0"
#spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library.git" }
#ahash = "0.8.4"
[dev-dependencies]
#spl-token = { git = "https://github.com/solana-labs/solana-program-library.git", tag = "token-cli-v4.0.0", features = [
#    "no-entrypoint",
#] }
spl-pod = { git = "https://github.com/solana-labs/solana-program-library.git", tag = "token-cli-v4.0.0", features = [
    "serde-traits",
] }
bytemuck = { version = "1.16.1", features = ["derive"] }
proptest = "1.5"
